# cyclone2-linux

./: .gitignore  CONTRIBUTING.md  INSTALL.md  Makefile  README.md  daemon.go  daemon_notify_test.go  go.mod  install.sh  interval.go  interval_test.go  main.go  probe.go  rgb.go  rgb_apply.go  status.go
.github/: release.yml
.github/workflows/: label-pr.yml  release.yml
cmd/cyclone2/: daemon.go  daemon_ds4_test.go  daemon_settle_test.go  probe.go  rgb_apply.go  status.go
cosmic-applet/: Cargo.toml
cosmic-applet/data/: dev.victor.Cyclone2Battery.desktop  io.github.vdemonchy.Cyclone2Linux.desktop
cosmic-applet/src/: app.rs  config.rs  main.rs  state.rs  watcher.rs
docs/: protocol.md  rgb-capture.sh  rgb-decode.py
extension/cyclone2-battery@vdemonchy.github.io/: extension.js  metadata.json  prefs.js
extension/cyclone2-battery@victor.local/: extension.js  metadata.json  prefs.js
extension/cyclone2-linux@vdemonchy.github.io/: extension.js  metadata.json  prefs.js
internal/config/: config.go  config_test.go
internal/device/: device.go  device_test.go
internal/hidraw/: device.go  discover.go  discover_test.go  errors.go
internal/notify/: notify.go
internal/powersupply/: powersupply.go  powersupply_test.go
internal/protocol/: led_test.go  protocol.go  protocol_test.go
internal/reader/: reader.go  reader_test.go
internal/state/: state.go  state_test.go
internal/uevent/: uevent.go  uevent_test.go
packaging/systemd/: cyclone2-battery.service  cyclone2-linux.service
packaging/udev/: 60-gamesir-cyclone2.rules
scripts/: install.sh
(+11 files in other folders)
